main/default/objects/Git_API_Settings__c/Git_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Git API Settings</label>
</CustomObject>