main/default/objects/Git_API_Settings__c/fields/Last_Processed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Date_Time__c</fullName>
    <label>Last Processed Date Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>