main/default/objects/Git_API_Settings__c/fields/Last_Processed_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Id__c</fullName>
    <label>Last Processed Id (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>