main/default/objects/Git_API_Settings__c/fields/oAuth_Token__c.field-meta.xml
<CustomField>
    <fullName>oAuth_Token__c</fullName>
    <label>oAuth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>