main/default/objects/Git_API_Settings__c/fields/Reponame__c.field-meta.xml
<CustomField>
    <fullName>Reponame__c</fullName>
    <label>Reponame</label>
    <length>255</length>
    <type>Text</type>
</CustomField>